manifests/events.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-deploy
  #namespace: website
  labels:
    projectName: website
spec:
  strategy: 
    type: RollingUpdate
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      run: website-events
  replicas: 1
  template:
    metadata:
      labels:
        run: website-events
    spec:
      containers:
      - name: events
        image: ImageNameHere
        ports:
        - containerPort: 5001
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "5m"
            memory: "10Mi"    
---
apiVersion: v1
kind: Service
metadata:
  name: subscription-svc
  #namespace: website
  labels:
    projectName: website
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    run: webiste-subscription
