manifests/subscription.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription-deploy
  #namespace: website
  labels:
    projectName: website
spec:
  strategy: 
    type: RollingUpdate
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      run: website-subscription
  replicas: 1
  template:
    metadata:
      labels:
        run: website-subscription
    spec:
      containers:
      - name: subscription
        image: ImageNameHere
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: subscription-volume
            mountPath: /creometry-db
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "5m"
            memory: "10Mi"    
      volumes:
          - name: subscription-volume
            persistentVolumeClaim:
              claimName: subscription-pvc
              

---
apiVersion: v1
kind: Service
metadata:
  name: subscription-svc
  #namespace: website
  labels:
    projectName: website
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    run: webiste-subscription
