manifests/website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: creometry-site-deploy
  namespace: website
  labels:
    projectName: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
        community: creometry
    spec:
      containers:
      - name: site
        image: azizbhy/website:front
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: creometry-site-svc
  namespace: website
  labels:
    projectName: website
spec:
  selector:
    app: site
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: creometry-site-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # GCP ONLY
    cert-manager.io/issue-temporary-certificate: "true"
    # GCP Only
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/affinity-canary-behavior: "sticky"
    # nginx.ingress.kubernetes.io/affinity: cookie
    #nginx.ingress.kubernetes.io/enable-cors: "true"
    #nginx.ingress.kubernetes.io/cors-allow-methods: "GET"
    # nginx.ingress.kubernetes.io/server-alias: "www.creometry.com"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
        - "creometry.com"
      secretName: creometry-website-ingress-secret
       
     
  rules:
  - host: "creometry.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: creometry-site-svc
            port:
              number: 8001
